cluster/apps_legacy/code-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: code-server
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_TARGET_SKY}"
    traefik.ingress.kubernetes.io/router.middlewares: identity-forward-auth@kubernetescrd
spec:
  tls:
    - secretName: code-tls
      hosts:
        - code.${SECRET_DOMAIN_ME}
  rules:
    - host: code.${SECRET_DOMAIN_ME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 8443
